Adding update by ID Support to get DBHandler inside repository to perform complex query
